--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
     "commander": "^2.9.0",
     "data-store": "^0.16.1",
     "easy-table": "^1.0.0",
+    "express": "^4.15.3",
     "keytar": "^3.0.2",
     "prompt": "^1.0.0",
     "shelljs": "^0.7.6"
-  },
-  "devDependencies": {
-    "express": "^4.15.3"
   }
 }
