--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "clean-css": "^4.1.3",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.4.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "vinyl-buffer": "^1.0.0",
