--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^2.2.28"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "clean-css": "^4.1.3",
